add homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-book-library",
+  "homepage": "https://konton022.github.io/react-book-library/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
